# ubuntu-cpu-temp-monitor

./: CMakeLists.txt  LICENSE  install.sh  main.cxx  makefile  readme.md  resources.qrc  test.cxx  uninstall.sh
include/: utils.hpp
pics/: app.webm
src/: utils.cxx
